--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -5,11 +5,24 @@
     <div class="btn-group">
       <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown"><i class="icon-cog"></i> <span class="caret"></span></button>
       <ul class="dropdown-menu dropdown-menu-right icons-right">
-        <li><%= link_to label_icon('Edit Workshop', :edit), edit_admin_workshop_url(@workshop) %></li>
-        <li><%= link_to label_icon('Financial Details', 'icon-coin'), financials_admin_workshop_url(@workshop) %></li>
-        <li><%= link_to label_icon('Show Duplicates', 'icon-copy'), admin_workshop_url(@workshop, duplicates: '1') %></li>
-        <li><%= link_to label_icon('Lost Users', 'icon-users'), lost_users_admin_workshop_url(@workshop) %></li>
-        <li><%= link_to 'Export Registrations (.csv)', admin_workshop_url(@workshop, format: 'csv') %></li>
+        <% if can?(:manage_event_registrations, @workshop) %>
+          <li class="divider"></li>
+          <li><%= link_to label_icon('Show Duplicates', 'icon-copy'), admin_workshop_url(@workshop, duplicates: '1') %></li>
+          <li><%= link_to label_icon('Lost Users', 'icon-users'), lost_users_admin_workshop_url(@workshop) %></li>
+          <li><%= link_to 'Export Registrations (.csv)', admin_workshop_url(@workshop, format: 'csv') %></li>
+        <% end %>
+        <% if can?(:manage_events, @workshop) %>
+          <li class="divider"></li>
+          <li><%= link_to label_icon('Edit Workshop', :edit), edit_admin_workshop_url(@workshop) %></li>
+        <% end %>
+        <% if can?(:manage_event_finances, @workshop) %>
+          <li class="divider"></li>
+          <li><%= link_to label_icon('Financial Details', 'icon-coin'), financials_admin_workshop_url(@workshop) %></li>
+        <% end %>
+        <% if can?(:manage_events, :all) %>
+          <li class="divider"></li>
+          <li><%= link_to label_icon('Permissions', 'icon-lock'), permissions_admin_workshop_url(@workshop) %></li>
+        <% end %>
         
       </ul>
     </div>
@@ -19,7 +32,11 @@
 <div class="row">
   <div class="col-md-9">
     <% toolbar  = toolbar_btn(icons(:new), register_new_url(@workshop), target: '_blank', title: 'New Registration', class: "btn btn-link btn-icon") %>
-    <% title    = params[:duplicates].nil? ? 'Registrations' : 'Registrations (Duplicates)'%>
+    <% if can?(:manage_event_registrations, @workshop) || can?(:manage_event_finances, @workshop) %>
+      <% title    = params[:duplicates].nil? ? 'Registrations' : 'Registrations (Duplicates)'%>
+    <% else %>
+      <% title    = 'Registrations (only displaying personal registrations)' %>
+    <% end %>
     <%= panel title: title, toolbar: toolbar, body: false do %>
       <table id="registration_table" class="table table-striped table-bordered" data-source="<%= dm_event.admin_workshop_url(@workshop, duplicates: params[:duplicates]) %>">
         <thead>
@@ -28,8 +45,8 @@
             <th width=50>Receipt</th>
             <th>Name</th>
             <th width=25>Balance</th>
-            <th width=85>Registered</th>
-            <th width=85>Last Login</th>
+            <th class="date">Registered</th>
+            <th class="date">Last Login</th>
           </tr>
         </thead>
         <tbody>
@@ -38,10 +55,12 @@
     <% end %>
   </div>
 
-  <div class="col-md-3">
-    <%= panel header: false do %>
-      <%= render partial: 'registration_stats', locals: {workshop: @workshop} %>
-    <% end %>
-  </div>
+  <% if can?(:manage_event_registrations, @workshop) || can?(:manage_event_finances, @workshop) %>
+    <div class="col-md-3">
+      <%= panel header: false do %>
+        <%= render partial: 'registration_stats', locals: {workshop: @workshop} %>
+      <% end %>
+    </div>
+  <% end %>
 </div>
 
