--- a/cms/app/views/dm_cms/admin/cms_blogs/index.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/index.html.erb
@@ -1,22 +1,19 @@
 <% content_for :content_title, icon_label('font-bullhorn', 'Blogs') %>
 <% content_for :content_title_extra do %>
-  <div class="visible-xs header-element-toggle">
-    <a class="btn btn-primary btn-icon" data-toggle="collapse" data-target="#header-buttons"><i class="icon-stats2"></i></a>
-  </div>
-  <div class="header-buttons">
-    <div class="collapse" id="header-buttons">
-      <div class="well">
-        <%= link_to icon_label(:new, 'New Blog'), new_admin_cms_blog_path, title: 'New Blog', class: 'btn btn-xs btn-default' %>
-      </div>
-    </div>
-  </div>
+  <% if can? :manage_content, :all %>
+    <%= page_header_buttons do %>
+      <%= link_to icon_label(:new, 'New Blog'), new_admin_cms_blog_path, title: 'New Blog', class: 'btn btn-xs btn-default' %>
+    <% end %>
+  <% end %>
 <% end %>
 
 <%= panel title: 'Current Blogs', body: false do %>
   <table id="drag_sort" class="table table-striped table-bordered table-condensed" data-update_url="<%= dm_cms.admin_cms_blog_sort_path %>">
     <thead>
       <tr>
-        <th class="sort_handle"></th>
+        <% if can?(:manage_content, :all) %>
+          <th class="sort_handle"></th>
+        <% end %>
         <th>Title</th>
         <th>Associated Event</th>
         <th width="50">Type</th>
@@ -28,7 +25,9 @@
       <% @blogs.each do |blog| %>
         <% present blog do |blog_presenter| %>
           <tr class="item" data-item_id="<%= blog.id %>">
-            <td class="sort_handle"></td>
+            <% if can?(:manage_content, :all) %>
+              <td class="sort_handle"></td>
+            <% end %>
             <td>
               <%= link_to blog.title, admin_cms_blog_path(blog) %>
             </td>
