--- a/cms/app/views/dm_cms/admin/cms_pages/index.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/index.html.erb
@@ -4,7 +4,7 @@
     <div class="collapse" id="header-buttons">
       <div class="well">
         <div class="btn-group">
-          <%= link_to('Snippets', dm_cms.admin_cms_snippets_path, class: 'btn btn-default btn-xs') %>
+          <%= link_to('Snippets', dm_cms.admin_cms_snippets_path, class: 'btn btn-default btn-xs') if can? :manage_content, :all %>
           <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown"><i class="icon-cog"></i> <span class="caret"></span></button>
           <ul class="dropdown-menu dropdown-menu-right icons-right">
             <li>
