fix calculation of payment reminders for recurring payments

--- a/cms/app/views/dm_cms/admin/cms_blogs/permissions.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/permissions.html.erb
@@ -22,7 +22,7 @@
     <% end %>
   </div>
   <div class="col-md-4">
-    <%= panel body: false, title: "Conent Managers" do %>
+    <%= panel body: false, title: "Content Managers" do %>
       <div class="panel-body">
         <p>Current users that can fully manage blogs</p>
       </div>
