--- a/event/app/views/dm_event/payments/_registrations_paypal_standard.html.erb
+++ b/event/app/views/dm_event/payments/_registrations_paypal_standard.html.erb
@@ -1,5 +1,5 @@
 <% payment_service_for @registration.receipt_code, current_account.preferred_paypal_merchant_id,
-        amount:   @registration.payment_owed.amount,
+        amount:   @registration.make_payment_now_amount,
         currency: @registration.payment_owed.currency.iso_code,
         service:  :paypal do |service|
           service.customer            :first_name => @registration.first_name,
