--- a/event/app/views/dm_event/payments/_registrations_paypal_standard.html.erb
+++ b/event/app/views/dm_event/payments/_registrations_paypal_standard.html.erb
@@ -1,6 +1,7 @@
+<% byebug %>
 <% payment_service_for @registration.receipt_code, current_account.preferred_paypal_merchant_id,
-        amount:   @registration.make_payment_now_amount,
-        currency: @registration.payment_owed.currency.iso_code,
+        amount:   @registration.make_payment_now_amount.to_f,
+        currency: @registration.make_payment_now_amount.currency.iso_code,
         service:  :paypal do |service|
           service.customer            :first_name => @registration.first_name,
                                       :last_name => @registration.last_name,
@@ -16,8 +17,8 @@
 
     <!-- display payment summary here -->
     <% if locale == :de %>
-      <%= image_submit_tag "https://www.paypal.com/de_DE/DE/i/btn/btn_xpressCheckout.gif" %>
+      <%= image_submit_tag "https://www.paypalobjects.com/webstatic/en_US/i/btn/png/gold-pill-paypal-34px.png" %>
     <% else %>
-      <%= image_submit_tag "https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif" %>
+      <%= image_submit_tag "https://www.paypalobjects.com/webstatic/en_US/i/btn/png/gold-pill-paypal-34px.png" %>
     <% end %>
 <% end %>
