we no longer store the previous url on each request.  instead, if we're redirecting to a login page, then store the return location at that time, or handle it being added as a parameter on the url.
This also fixed an issue where on login we might get redirected to
a missing image file or other asset.

--- a/cms/spec/dummy/themes/_mbus/theme_support/views/layouts/cms_templates/_blog_right_sidebar.html.erb
+++ b/cms/spec/dummy/themes/_mbus/theme_support/views/layouts/cms_templates/_blog_right_sidebar.html.erb
@@ -60,7 +60,7 @@
         <% follow_class = following ? 'btn btn-default btn-small follow_active' : 'btn btn-default btn-small' %>
         <%= button_to button_title, dm_cms.cms_blog_toggle_follow_path(@blog.id), remote: true, method: :patch, id: "follow_button", class: follow_class %>
       <% else %>
-        <%= link_to I18n.t('core.login'), main_app.new_user_session_path, class: 'btn btn-default btn-small' %>
+        <%= link_to I18n.t('core.login'), main_app.new_user_session_path(redirect_to: request.url), class: 'btn btn-default btn-small' %>
       <% end %>
     <% end %>
   </div>
