allow a CmsPage to be marked as the Welcome Page.  If a page is marked, then the user will be automatically redirected there when they log in. It can be any published page.
Also added some help for the liquid variables available when editing
content

--- a/cms/app/views/dm_cms/admin/cms_pages/_tree.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/_tree.html.erb
@@ -11,6 +11,7 @@
       <% else %>
         <% item_title = (item.title.blank? ? item.slug : item.title) %>
         <%= can?(:manage_content, item) ? link_to(item_title, :action => :show, :id => item) : item_title %>
+        <%= "  <span class='icon-globe'></span>".html_safe if item.welcome_page? %>
       <% end %>
     </dt>
     <dd><%= present(item).label_published %></dd>
